<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi=
    "http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation=
    "http://maven.apache.org/POM/4.0.0
     https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>
      org.springframework.boot
    </groupId>
    <artifactId>
      spring-boot-starter-parent
    </artifactId>
    <version>3.3.6</version>
    <relativePath />
  </parent>

  <groupId>com.ubs.ledger</groupId>
  <artifactId>
    trade-ledger-service
  </artifactId>
  <version>2.0.0</version>
  <packaging>jar</packaging>

  <name>Trade Ledger Service</name>
  <description>
    REST API for Fixed Income Operations.
    Connects to Azure SQL.
  </description>

  <properties>
    <java.version>21</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>
        org.springframework.boot
      </groupId>
      <artifactId>
        spring-boot-starter-web
      </artifactId>
    </dependency>

    <dependency>
      <groupId>
        org.springframework.boot
      </groupId>
      <artifactId>
        spring-boot-starter-data-jpa
      </artifactId>
    </dependency>

    <dependency>
      <groupId>
        org.springframework.boot
      </groupId>
      <artifactId>
        spring-boot-starter-actuator
      </artifactId>
    </dependency>

    <dependency>
      <groupId>
        com.microsoft.sqlserver
      </groupId>
      <artifactId>mssql-jdbc</artifactId>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>
        org.projectlombok
      </groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>
        org.springframework.boot
      </groupId>
      <artifactId>
        spring-boot-starter-test
      </artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>
      trade-ledger-service
    </finalName>
    <plugins>
      <plugin>
        <groupId>
          org.springframework.boot
        </groupId>
        <artifactId>
          spring-boot-maven-plugin
        </artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>
                org.projectlombok
              </groupId>
              <artifactId>
                lombok
              </artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
